Correction de l'overflow

--- a/skins/mel_elastic/styles/taskbar.css
+++ b/skins/mel_elastic/styles/taskbar.css
@@ -3,7 +3,8 @@
     position: absolute;
     height: 100%;
     z-index: 999;
-    overflow-y: auto;
+    /* overflow-y: auto;
+    overflow-x: visible; */
 }
 
 #taskmenu{
